added fade in/out to volume

--- a/src/index.jade
+++ b/src/index.jade
@@ -21,6 +21,10 @@ html
         input.volume(type="range", min="0.0", max="1.0", step="0.05")
       li
         input.seek(type="range", min="0", max="1", step="0.05", value="0")
+      li
+        a.fadeIn(href="#") Fade In
+      li
+        a.fadeOut(href="#") Fade Out
 
     // build:js /js/bundle.min.js
     script(src="/js/bundle.js")
